# price_ru

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: run.yml
price_ru/: __init__.py  __main__.py  app.py
tests/: context.py  test_app.py
